# Telegram.Yandex.Bot

./: .gitignore  Makefile  README.md  bot.service  config.py  db.py  logger.py  main.py  parser.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
